# thumbnail-generator-demo

./: .env.example  .gitignore  Cargo.toml  README.md  image-indexer-demo.db
src/: app_state.rs  config.rs  error.rs  main.rs
src/domain/: image_job.rs  mod.rs  status.rs
src/processing/: image_processor.rs  mod.rs  thumbnail_processor.rs
src/repository/: mod.rs  sqlite_image_job_repository.rs
src/routes/: health.rs  images.rs  mod.rs
src/storage/: file_storage.rs  mod.rs
src/worker/: image_indexing_worker.rs  mod.rs  retry.rs
